[package]
name = "gst"
version = "1.0.1"
edition = "2021"
description = "Screens your Git projects for unstaged, untracked files and not pushed commits."

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.1"

[profile.release]
opt-level = 3
strip = true
